# advent-of-code-2025

./: .gitignore  Cargo.toml
day01/: Cargo.toml
day01/src/: lib.rs  main.rs  part1.rs  part2.rs
day02/: Cargo.toml
day02/benches/: part1_bench.rs  part2_bench.rs
day02/src/: digits_leading.rs  digits_trailing.rs  lib.rs  part1.rs  part1_leading.rs  part2.rs  part2_leading.rs  part2_parallel.rs
day03/: Cargo.toml
day03/benches/: part2_bench.rs
day03/src/: lib.rs  part1.rs  part2.rs  part2_const_bank_size.rs  part2_const_bank_size_par.rs
day04/: Cargo.toml
day04/benches/: part2_bench.rs
day04/src/: coordinates.rs  lib.rs  part1.rs  part2.rs
utils/: Cargo.toml
utils/src/: lib.rs
