[package]
name = "day02"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "part1"
[[bin]]
name = "part2"

[[bench]]
name = "part1_bench"
harness = false
[[bench]]
name = "part2_bench"
harness = false

[dependencies]
anyhow.workspace = true
itertools.workspace = true
nom.workspace = true
utils = { path = "../utils" }

[dev-dependencies]
criterion.workspace = true
